[package]
name = "dynamixel-driver"
version = "0.1.0"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio-serial = { version = "5.4.1", default-features = false }
bytes = "1.0"
tokio = { version = "1.21", features = ["time"], default-features = false }
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
async-trait = "0.1"
thiserror = "^1.0"

[dev-dependencies]
tokio = { version = "1.21", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }
structopt = "0.3"
anyhow = "1.0"
