[package]
name = "dynamixel-driver"
version = "0.2.1"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2021"

description = "Driver for Dynamixel v1 servos"
documentation = "https://davidweis.dev/dynamixel-driver/dynamixel_driver/index.html"
homepage = "https://github.com/dmweis/dynamixel-driver"
repository = "https://github.com/dmweis/dynamixel-driver"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["LSS", "Lynxmotion", "servo", "async", "serial"]


[dependencies]
futures = "0.3"
tokio-serial = { version = "5.4.1", default-features = false }
bytes = "1.0"
tokio = { version = "1.21", features = ["time"], default-features = false }
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
async-trait = "0.1"
thiserror = "^1.0"

[dev-dependencies]
tokio = { version = "1.21", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }
structopt = "0.3"
anyhow = "1.0"
